@@ -13,6 +13,7 @@
     (Deriving from QWindowsStyle seems to cause a crash in konqueror)
 10. Remove linkage to libkfile
 11. Set toolbar frame width to 0 if not drawing borders.
+12. Added option to remove all borders from maximised windows.
 
 1.2.0
 -----
